# magician-automation-tool

./: README.md  main.py  pyproject.toml  pytest.ini  setup.py
config/: settings.db  workflows.db
core/: compat.py  database.py  desktop_auto.py  email_handler.py  integration.py  scheduler.py  web_automation.py  workflow_engine.py
test/: conftest.py  test_integration.py  test_minimal.py  test_scheduler.py  test_web_automation.py
ui/: editor.py  main_window.py
workflows/: report.json
