[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-tool"
version = "0.1.0"
description = "Ferramenta de automacao"
authors = [
    {name = "Seu Nome", email = "seu@email.com"}
]

dependencies = [
    "pyautogui",
    "schedule",
    "pytest"
]

[tool.setuptools]
packages = ["core", "plugins"]
